# goldy-bot-framework

./: .buildinfo  .gitignore  .gitmodules  CNAME  Dockerfile  LICENSE  Makefile  README.md  add_cname.py  api_documentation.html  cli.html  docker-compose.yml  docker-entrypoint.sh  examples.buttons.html  examples.database_wrapper.html  examples.html  examples.reply.html  examples.slash_options.html  examples.sub_commands.html  genindex.html  goldy.commands.html  goldy.database.databases.html  goldy.database.html  goldy.database.wrappers.html  goldy.extensions.html  goldy.guilds.html  goldy.html  goldy.live_console.html  goldy.nextcore_utils.channels.html  goldy.nextcore_utils.embeds.html  goldy.nextcore_utils.guilds.html  goldy.nextcore_utils.html  goldy.nextcore_utils.messages.html  goldy.nextcore_utils.slash_options.html  goldy.objects.html  goldy.recipes.html  index.html  objects.inv  py-modindex.html  pyproject.toml  (+5 more)
.doctrees/: api_documentation.doctree  cli.doctree  environment.pickle  examples.buttons.doctree  examples.database_wrapper.doctree  examples.doctree  examples.reply.doctree  examples.slash_options.doctree  examples.sub_commands.doctree  goldy.commands.doctree  goldy.database.databases.doctree  goldy.database.doctree  goldy.database.wrappers.doctree  goldy.doctree  goldy.extensions.doctree  goldy.guilds.doctree  goldy.live_console.doctree  goldy.nextcore_utils.channels.doctree  goldy.nextcore_utils.doctree  goldy.nextcore_utils.embeds.doctree  goldy.nextcore_utils.guilds.doctree  goldy.nextcore_utils.messages.doctree  goldy.nextcore_utils.slash_options.doctree  goldy.objects.doctree  goldy.recipes.doctree  index.doctree  utils.doctree
.github/workflows/: documentation.yaml  lint_and_test.yaml
GoldyBot/: README.md  __init__.py  config.py  errors.py  file_templates.py  info.py  logging.py  paths.py  urls.py
GoldyBot/assets/: goldy.json  run.py  token.env
GoldyBot/cli/: __init__.py  __main__.py  _setup.py  extensions.py  file_templates.py  setup.py
GoldyBot/client/: __init__.py  presence.py  token.py
GoldyBot/file_templates/: goldy.json  token.env
GoldyBot/goldy/: __init__.py  goldy_config.py  permission_system.py  perms.py  presence.py  system.py  token.py
GoldyBot/goldy/commands/: __init__.py  command.py  command_loader.py  decorator.py  group_command.py  listener.py  loader.py  params_utils.py  prefix_command.py  slash_command.py
GoldyBot/goldy/components/: __init__.py
GoldyBot/goldy/database/: __init__.py  wrapper.py
GoldyBot/goldy/events/: __init__.py  decorator.py  event.py  event_types.py
GoldyBot/goldy/extensions/: __init__.py  extension_loader.py  extension_metadata.py  extension_reloader.py
GoldyBot/goldy/guilds/: __init__.py  guild.py
GoldyBot/goldy/live_console/: __init__.py  app.py
GoldyBot/goldy/nextcore_utils/: __init__.py  colours.py  defer.py  files.py  front_end_errors.py  params.py  urls.py
GoldyBot/goldy/objects/: __init__.py  channel.py  gold_platter.py  golden_platter.py  invokable.py  member.py  message.py
GoldyBot/goldy/recipes/: __init__.py  button.py  select_menu.py
GoldyBot/goldy/utils/: __init__.py  _async.py  cache.py  human_datetime.py  strings.py
GoldyBot/internal_extensions/: bot_admin.py  debug.py  extensions.py  goldy.py  guild_admin.py  timestamps.py
GoldyBot/internal_extensions/timestamps/: __init__.py  embeds.py
GoldyBot/utils/: __init__.py  _async.py  _dict.py  _lambda.py  cache.py  human_datetime.py  strings.py  url.py  value_check.py
_modules/: index.html
_modules/GoldyBot/: errors.html  paths.html
_modules/GoldyBot/goldy/: database.html  presence.html  token.html
_modules/GoldyBot/utils/: _async.html  _lambda.html  cache.html  human_datetime.html  strings.html
_sources/: api_documentation.rst.txt  examples.sub_commands.rst.txt  goldy.commands.rst.txt  goldy.database.wrappers.rst.txt  goldy.extensions.rst.txt  goldy.recipes.rst.txt  goldy.rst.txt
assets/: .$software_design_1.drawio.bkp  .$software_design_1.drawio.dtmp  software_design_1.drawio
demo/: bruh.mjs  cli_demo.py  run.py  test.py
docker_stuff/: cli.py  run.sh
docs/: cli.rst  conf.py  documentation.rst  examples.buttons.rst  examples.database_wrapper.rst  examples.reply.rst  examples.rst  examples.slash_options.rst  goldy.commands.rst  goldy.database.rst  goldy.extensions.rst  goldy.live_console.rst  goldy.nextcore_utils.channels.rst  goldy.nextcore_utils.components.rst  goldy.nextcore_utils.embeds.rst  goldy.nextcore_utils.guilds.rst  goldy.nextcore_utils.rst  goldy.nextcore_utils.slash_options.rst  goldy.objects.rst  goldy.recipes.rst  goldy.rst  goldy.utils.rst  index.rst  utils.rst
docs/_build/doctrees/: cli.doctree  documentation.doctree  environment.pickle  goldy.commands.doctree  goldy.database.databases.doctree  goldy.database.doctree  goldy.doctree  goldy.extensions.doctree  goldy.guilds.doctree  goldy.live_console.doctree  goldy.nextcore_utils.doctree  (+5 more)
examples/: README.md  buttons.py  database_wrapper.py  reply.py  slash_options.py  sub_commands.py
goldy_bot/: __init__.py  __main__.py  colours.py  database.py  errors.py  extension.py  files.py  goldy.py  goldy.template.toml  helper.py  intents.py  logger.py
goldy_bot/cli/: __init__.py  __main__.py  benchmark.py  command_nuke.py  setup.py  start.py
goldy_bot/commands/: __init__.py  auto_complete.py  command.py  group_command.py  slash_option.py  types.py
goldy_bot/config/: config.py  typing.py
goldy_bot/database/: __init__.py  database.py  database_manager.py  database_wrapper.py  enums.py
goldy_bot/extensions/: __init__.py  extension.py  loader.py  manager.py
goldy_bot/goldy/: __init__.py  goldy.py
goldy_bot/helpers/: __init__.py  dict_helper.py  embed.py  files.py  helper.py
goldy_bot/objects/: __init__.py  message.py
goldy_bot/requirements/: guild.py
goldy_bot/typings/: __init__.py  commands.py  extensions.py  goldy.py  requirements.py
goldy_bot/wrappers/: __init__.py  legacy.py  wrapper.py
scripts/: add_cname.py  docker_build.py
tests/: __init__.py  test_config.json  test_config.py
tests/utils/: test_cache_lookup.py
(+134 files in other folders)
