[project]
name = "GoldyBot"
description = "Yet another another rewrite of Goldy Bot, a discord bot framework for my own bots."
authors = [
    {name = "Goldy", email = "goldy@devgoldy.xyz"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "goldybot", "goldy bot", "Goldy Bot", "Goldy Bot V4", "Goldy Bot V3", "goldy", "Goldy Bot V5"
]
classifiers = [
	'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11'
]
dependencies = [
    "requests",
    "importlib-metadata; python_version<'3.8'",
    "devgoldyutils>=2.5",
    "nextcore>=2.0.0",
    "click>=8.1.3",
    "python-decouple>=3.7",
    "motor",
    "cmd2",
    "pygame==2.3.0",
    "regex",
    "psutil",
    "dateparser",
    "pytz"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "Sphinx",
    "sphinxext-opengraph",
    "sphinx-inline-tabs",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "pytest",
    "pytest-cov",
    "ruff"
]

[project.urls]
GitHub = "https://github.com/Goldy-Bot/Goldy-Bot-V5"
BugTracker = "https://github.com/Goldy-Bot/Goldy-Bot-V5/issues"
ChangeLog = "https://github.com/Goldy-Bot/Goldy-Bot-V5/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "GoldyBot.info.VERSION" }

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["GoldyBot"]

[project.scripts]
goldybot = "GoldyBot.cli.__main__:goldy_bot"
goldy_bot = "GoldyBot.cli.__main__:goldy_bot"


# Ruff
# ---------------

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501", "E402", "E702", "E701"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "env",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py38"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"GoldyBot/cli/__main__.py" = ["E741"]
"GoldyBot/logging.py" = ["F401"]
"GoldyBot/utils/_lambda.py" = ["E731"]