[project]
name = "GoldyBot"
description = "Yet another another rewrite of Goldy Bot, a discord bot framework for my own bots."
authors = [
    {name = "Goldy", email = "goldy@devgoldy.xyz"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "goldybot", "goldy bot", "Goldy Bot", "Goldy Bot V4", "Goldy Bot V3", "goldy", "Goldy Bot V5"
]
classifiers = [
	'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11'
]
dependencies = [
    "requests",
    "importlib-metadata; python_version<'3.8'",
    "devgoldyutils>=2.5",
    "nextcore[speed]>=2.0.1",
    "click>=8.1.3",
    "python-decouple>=3.7",
    "motor",
    "cmd2",
    "pygame==2.3.0",
    "regex",
    "psutil",
    "dateparser",
    "toml",
    "colorthief",
    "get-annotations"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "Sphinx",
    "sphinxext-opengraph",
    "sphinx-inline-tabs",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "pytest",
    "pytest-cov",
    "ruff",
    "build"
]

[project.urls]
GitHub = "https://github.com/Goldy-Bot/Goldy-Bot-V5"
BugTracker = "https://github.com/Goldy-Bot/Goldy-Bot-V5/issues"
ChangeLog = "https://github.com/Goldy-Bot/Goldy-Bot-V5/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "GoldyBot.info.VERSION" }

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["GoldyBot"]

[project.scripts]
goldybot = "GoldyBot.cli.__main__:goldy_bot"
goldy_bot = "GoldyBot.cli.__main__:goldy_bot"