[project]
name = "GoldyBot"
description = "Yet another another rewrite of Goldy Bot, a discord bot framework for my own bots."
authors = [
    {name = "Goldy", email = "goldy@devgoldy.xyz"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "goldybot", "goldy bot", "Goldy Bot", "Goldy Bot V4", "Goldy Bot V3", "goldy", "Goldy Bot V5"
]
classifiers = [
	'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11'
]
dependencies = [
    "requests",
    "importlib-metadata; python_version<'3.8'",
    "setuptools>=68.2.2",
    "devgoldyutils==2.5.8",
    "nextcore[speed]>=2.0.1",
    "click>=8.1.3",
    "python-decouple>=3.7",
    "motor",
    "cmd2",
    "regex",
    "psutil",
    "dateparser",

    # Pancake dependecies
    "toml",
    "colorthief",
    "get-annotations",
    "packaging",
    "typer[all]",
    "snakeviz",
    "prettyprinter"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "Sphinx",
    "sphinxext-opengraph",
    "sphinx-inline-tabs",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "pytest",
    "pytest-cov",
    "ruff",
    "build",
    "devgoldyutils[pprint]==2.5.8"
]

[project.urls]
GitHub = "https://github.com/Goldy-Bot/Goldy-Bot-V5"
BugTracker = "https://github.com/Goldy-Bot/Goldy-Bot-V5/issues"
ChangeLog = "https://github.com/Goldy-Bot/Goldy-Bot-V5/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "goldy_bot.__version__" }

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["GoldyBot*", "goldy_bot*"]

[tool.setuptools.package-data]
"goldy_bot" = ["goldy.template.toml"]

[project.scripts]
goldy-bot = "goldy_bot.cli:app"